--- a/adoc/11_single_article.adoc
+++ b/adoc/11_single_article.adoc
@@ -46,7 +46,7 @@ include::../javasrc/11/src/main/java/tdpe/example/domain/BlogServiceImpl.java[ta
 include::../javasrc/11/src/main/java/tdpe/example/web/BlogController.java[tags=single_article]
 ----
 
-<1> der Pfad, auf den die Methode reagieren soll, sieht auf den ersten Blick erst mal komisch auf.
+<1> Der Pfad, auf den die Methode reagieren soll, sieht auf den ersten Blick erst mal komisch auf.
 Der Teil innerhalb der geschweiften Klammern nennt sich Path-Variable und ist im wesentlichen
 genau das - ein variabler Teil innerhalb des Pfades.
 Dieser bekommt einen Namen, `id`, und in diesem Fall zusätzlich einen regulären Audruck,
