--- a/adoc/12_add_comment.adoc
+++ b/adoc/12_add_comment.adoc
@@ -66,7 +66,7 @@ include::../javasrc/12/src/main/java/tdpe/example/web/AddCommentCmd.java[]
 Im Controller müssen wir eine kleine Anpassung vornehmen sowie eine Methode zum
 Hinzufügen der Kommentare anlegen.
 
-Zuerst müssen wir beim Anzeigen der Kommentare auch dass Command-Object der View hinzufügen:
+Zuerst müssen wir beim Anzeigen der Kommentare auch das Command-Object der View hinzufügen:
 
 
 [source,java]
