--- a/adoc/4.adoc
+++ b/adoc/4.adoc
@@ -111,8 +111,10 @@ public org.springframework.web.servlet.ModelAndView WelcomeController.welcome()
 to {[/]}: There is already 'blogController' bean method
 ----
 
-In dem Projekt existiert noch der ursprüngliche WelcomeController, welcher auch ein RequestMapping für `/` bereitstellt.
-Zwei gleiche Mappings sind nicht möglich - am einfachsten können wir dies lösen, indem wir den alten, nicht mehr gebrauchten Controller und die View löschen.
+In dem Projekt existiert noch der ursprüngliche WelcomeController,
+welcher auch ein RequestMapping für `/` bereitstellt.
+Zwei gleiche Mappings sind nicht möglich - ihr müsst deshalb das Mapping für
+den `WelcomeController` angepasst werden.
 
 Danach laufen auch die Integration-Tests erfolgreich durch:
 
