--- a/adoc/4.adoc
+++ b/adoc/4.adoc
@@ -83,7 +83,7 @@ include::../javasrc/3/src/it/java/tdpe/example/web/BlogControllerIT.java[tags=te
 Mit `@Autowired` fordern wir ein Objekt dieser Klasse bei Spring an - weiteres dazu kommt später noch
 <5> Mit der MockMVC-Instanz können wir jetzt Requests ausführen. In diesem Fall ein GET auf `/`, das gleiche, was ein Browser beim Aufrufen der Seite machen würde.
 <6> Wir erwarten, dass der Status (=das Ergebnis in Form eines https://de.wikipedia.org/wiki/HTTP-Statuscode[Codes]) der Anfrage OK ist
-<7> außerdem soll das Ergebniss vom Typ HTML sein
+<7> außerdem soll das Ergebnis vom Typ HTML sein
 <8> und die Seite sollte die passende Überschrift enthalten
 
 ==== Ausführen der Tests
