--- a/adoc/misc.adoc
+++ b/adoc/misc.adoc
@@ -3,6 +3,8 @@
 === Grundlage für eigenes Projekt
 
 * In der pom.xml sollten groupId und artifactID des Projektes angepasst werden
+** Dabei bietet sich z.B. `de.unibi.tdpe.ss2017.*team-nr*` als groupId an
+* Die Ober-Packages (`tdpe.example`) sollten passend zu eurer groupId und artifactId angepasst werden
 
 * Die ExampleApplication sollte einen sinnvolleren Namen für euer Programm bekommen
 
