--- a/adoc/6.adoc
+++ b/adoc/6.adoc
@@ -163,3 +163,6 @@ include::../javasrc/6/src/main/resources/data.sql[tags=]
 === Starten
 
 Wir können die Anwendung wieder ausführen (`./mnvw spring-boot:run`)
+
+[.thumb]
+image::step6_start.png[Blog]
