--- a/adoc/5.adoc
+++ b/adoc/5.adoc
@@ -88,3 +88,6 @@ include::../javasrc/5/src/main/java/tdpe/example/domain/BlogServiceImpl.java[tag
 damit erkennt Spring sie als Service und kann sie anderen Klassen bereitstellen, z.B. dem  `BlogController`
 
 Wir können die Anwendung jetzt starten und sehen auf http://localhost:8080 die beiden im Service erstellten Artikel.
+
+[.thumb]
+image::step5_start.png[Blog]
