--- a/adoc/8_add_articles.adoc
+++ b/adoc/8_add_articles.adoc
@@ -130,7 +130,14 @@ Wir können die Anwendung wieder mit `./mvnw spring-boot:run` starten.
 
 Wenn man auch den `neuer Artikel`-Link klickt, wird man zum Login weitergeleitet.
 
-Nach dem Login kommt man zu der Eingabemaske - gibt man dort etwas ein und bestätigt,
+Nach dem Login kommt man zu der Eingabemaske:
+
+[.thumb]
+image::step8_add_article.png[Eingabemaske]
+
+
+Gibt man dort etwas ein und bestätigt,
 erscheint auf der Hauptseite ein neuer Artikel.
 
-TODO Bilder
+[.thumb]
+image::step8_added.png[neuer Artikel]
