--- a/adoc/1.adoc
+++ b/adoc/1.adoc
@@ -13,7 +13,7 @@ Für uns reicht es, dass vorbereitete Repo zu klonen:
 
 [source, console]
 ----
-git clone git clone https://tdpe.techfak.uni-bielefeld.de/git/tdpe-ss-2018.spring_boot_example.git
+git clone https://tdpe.techfak.uni-bielefeld.de/git/tdpe-ss-2018.spring_boot_example.git
 ----
 
 
