--- a/adoc/7_security.adoc
+++ b/adoc/7_security.adoc
@@ -55,7 +55,7 @@ include::../javasrc/7/src/main/resources/data.sql[tags=]
 <1> Der Nutzer bekommt zusätzlich ein Passwort übergeben.
 Um zu verhindern, dass Passwörter im Klartext in der Datenbank stehen, werden diese gehasht -
 in diesem Fall mit BCrypt. In diesem Fall ist das Passwort zu diesem Hash `password`,
-hashen kann man diese z.B. mit http://bcrypthashgenerator.apphb.com/[^]
+hashen kann man diese z.B. mit https://www.devglan.com/online-tools/bcrypt-hash-generator[^]
 
 <2> Außerdem müssen wir dem Nutzer noch Rollen zuweisen, dieser Nutzer bekommt die Rolle `ROLE_USER`
 
