--- a/adoc/5.adoc
+++ b/adoc/5.adoc
@@ -12,7 +12,7 @@ Dazu definieren wir als erstes ein passendes Interface:
 [source,java]
 .BlogService.java
 ----
-include::../javasrc/5/src/main/java/tdpe/example/domain/BlogService.java[tags=class]
+include::../javasrc/5/src/main/java/gpse/example/domain/BlogService.java[tags=class]
 ----
 
 Der Service bekommt erstmal nur eine einzelne Methode - zum Laden aller Artikel.
@@ -29,7 +29,7 @@ Diesen benutzen wir dann im Controller, anstatt dort die Artikel neu zu erstelle
 [source,java]
 .BlogController.java
 ----
-include::../javasrc/5/src/main/java/tdpe/example/web/BlogController.java[tags=class]
+include::../javasrc/5/src/main/java/gpse/example/web/BlogController.java[tags=class]
 ----
 
 <1> Hier benutzen wir wieder `@Autowired` -
@@ -52,7 +52,7 @@ sondern lassen durch eine Library eine Implementierung erstellen, deren Verhalte
 [source,java]
 .BlogControllerTest.java
 ----
-include::../javasrc/5/src/test/java/tdpe/example/web/BlogControllerTest.java[tags=test]
+include::../javasrc/5/src/test/java/gpse/example/web/BlogControllerTest.java[tags=test]
 ----
 
 <1> Wir legen eine Instanzvariable des benötigen Interfaces an.
@@ -68,7 +68,7 @@ Wenn man auch die Integration-Tests ausführt oder das gesamte Programm startet,
 
 [source, console]
 ----
-Caused by: org.springframework.beans.factory.NoSuchBeanDefinitionException: No qualifying bean of type 'tdpe.example.domain.BlogService' available: expected at least 1 bean which qualifies as autowire candidate. Dependency annotations: {}
+Caused by: org.springframework.beans.factory.NoSuchBeanDefinitionException: No qualifying bean of type 'gpse.example.domain.BlogService' available: expected at least 1 bean which qualifies as autowire candidate. Dependency annotations: {}
 ----
 
 Der Grund dafür ist: im BlogController erwarten wir eine Implementation des `BlogService`, bisher gibt es aber nur das Interface.
@@ -81,7 +81,7 @@ Diese liefert in `getArticles` erstmal eine einfache Liste von Artikeln:
 [source,java]
 .BlogServiceImpl.java
 ----
-include::../javasrc/5/src/main/java/tdpe/example/domain/BlogServiceImpl.java[tags=class]
+include::../javasrc/5/src/main/java/gpse/example/domain/BlogServiceImpl.java[tags=class]
 ----
 
 <1> Die Klasse ist annotiert mit `@Service` -
