--- a/adoc/3.adoc
+++ b/adoc/3.adoc
@@ -58,6 +58,12 @@ Artikel "n" --> "1" Nutzer : geschrieben von
 
 === Klassen
 
+[IMPORTANT]
+====
+Getter sind jeweils der Übersichtlichkeit halber weggelassen, sollten aber zusätzlich generiert werden. Weitere Methoden enthalten die Klassen noch nicht.
+====
+
+
 Die grad entwickelten Klassen können nun implementiert werden. Die Klassen dazu legen wir im Package `domain` an:
 
 [source,java]
@@ -87,12 +93,6 @@ include::../javasrc/2/src/main/java/gpse/example/domain/Comment.java[tags=class]
 ----
 
 <1> Auch hier setzen wir den Erstell-Zeitpunkt direkt im Konstruktor, anstatt ihn zu übergeben.
-
-
-[IMPORTANT]
-====
-Getter sind jeweils der Übersichtlichkeit halber weggelassen. Weitere Methoden enthalten die Klassen noch nicht.
-====
 
 Uns fehlt noch die Möglichkeit, Artikeln neue Kommentare hinzuzufügen.
 Dafür fügen wir eine weitere Methode hinzu:
